* Some themes don't load comment reply JS on GD single page - FIXED
* Featured image field not updated on delete all images - FIXED
* GD Listings pagination don't renders WPBakery Page Builder shortcodes - FIXED
* BuddyPress v6.0.0 compatibility - CHANGED
* Auto save don't saves all images when image upload is in progress - FIXED

= 2.0.0.96 =
* Option added to make zip/post code as a required field - FIXED
* The Open Graph image does not work from geodirectory categories - FIXED
* Skip duplicate slug checking for WP post categories & tags - CHANGED
* Compatibility for rankmath breadcrumb - FIXED
* Divi search template shows archive item in multiple loop - FIXED
* Add listing page is not working properly with Divi page builder - FIXED
* Business hours timezone input replaced with timezones string list - CHANGED
* Elementor GD CSS Hide Condition is not working with post_images key - FIXED
* Listing reviews pagination not working with some permalink structure - FIXED
* Map shows wrong markers when distance filter is active - FIXED
* Filter added to resize map marker icons - ADDED
* Allow to set zoom and map center when no results found - ADDED
* [gd_post_badge] is not working with post_images field - FIXED
* Text changes for Elementor Template Publish Settings - CHANGED
* Add Filter to change submit listing button text - FIXED

= 2.0.0.95 =
* Changes for Ninja Forms fix related to API requests - CHANGED
* [gd_post_meta] add support for default category & post status - ADDED
* [gd_post_meta] allow option to show icon only - ADDED
* GD > Recently Viewed now supports Elementor pro skins - ADDED
* Should not send comment email notification to author for spam comment - CHANGED
* OSM Directions API changed to non SSL temporarily to fix their certificate error - CHANGED
* [gd_post_badge] is_greater_than condition is not working with post date - FIXED
* Elementor Image dynamic field fallback image not working - FIXED